# pretrained-microscopy-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
pretrained_microscopy_models/: __init__.py  config.py  losses.py  metrics.py  segmentation_training.py
